@@ -43,6 +43,9 @@ IN DEVELOPMENT
 
   BUGFIXES:
 
+   * ``commit`` now succeeds when a checkout and its master branch share a
+     repository.  (Aaron Bentley, #177592)
+
    * Fixed Unicode encoding error in ``ignored`` when the output is
      redirected to a pipe. (Lukáš Lalinský)
 
